10 points done, extra credit left

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             </div>
                         </li>
                     </ul>
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ml-auto year-container">
                         <li class="nav-item">
                             <a class="nav-link text" aria-current="page"> Year &nbsp;
                                 <input type="range" id="slider" min="1980" max="2013" value="1980">
@@ -144,12 +144,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <button id="playButton" class="btn btn-primary" onclick="togglePlayPause()">
+                            <button id="playButton" class="btn btn-primary" onclick="togglePlayPause();">
                                 <i id="playIcon" class="fas fa-play"></i>
                                 <span id="playText">Play</span>
                             </button>
                         </li>
-                        <a class='year-event' year-value=1998></a>
+                        <a class='year-event' value=1998></a>
                     </ul>
 
                 </div>
