Added image of countries and extra GapMinder attributes

--- a/index.html
+++ b/index.html
@@ -54,15 +54,25 @@
                                 <li><button class="dropdown-item x-axis-nav" type="button"
                                         x-axis-nav-value='Data.Health.Fertility Rate'>Fertility Rate</button></li>
                                 <li><button class="dropdown-item x-axis-nav" type="button"
+                                        x-axis-nav-value='Data.Rural Development.Arable Land'>Arable Land</button></li>
+                                <li><button class="dropdown-item x-axis-nav" type="button"
+                                        x-axis-nav-value='Data.Rural Development.Agricultural Land'>Agriculture Land</button></li>
+                                <li><button class="dropdown-item x-axis-nav" type="button"
                                         x-axis-nav-value='Data.Infrastructure.Telephone Lines'>Telephone Lines</button></li>
                                 <li><button class="dropdown-item x-axis-nav" type="button"
                                         x-axis-nav-value='Data.Rural Development.Rural Population'>Rural Population</button></li>
                                 <li><button class="dropdown-item x-axis-nav" type="button"
                                         x-axis-nav-value='Data.Health.Total Population'>Total Population</button></li>
                                 <li><button class="dropdown-item x-axis-nav" type="button"
-                                        x-axis-nav-value='Data.Health.Population Growth'>Population Growth</button></li>
+                                        x-axis-nav-value='Data.Health.Population Growth'>Health Population Growth</button></li>
                                 <li><button class="dropdown-item x-axis-nav" type="button"
                                         x-axis-nav-value='Data.Urban Development.Population Density'>Population Density</button></li>
+                                <li><button class="dropdown-item x-axis-nav" type="button"
+                                        x-axis-nav-value='Data.Infrastructure.Mobile Cellular Subscriptions'>Cellular Subscriptions</button></li>
+                                <li><button class="dropdown-item x-axis-nav" type="button"
+                                        x-axis-nav-value='Data.Rural Development.Arable Land Percent'>Arable Land Precentage</button></li>
+                                <li><button class="dropdown-item x-axis-nav" type="button"
+                                        x-axis-nav-value='Data.Rural Development.Rural Population Growth'> Rural Population Growth</button></li>
                             </ul>
                         </li>
                         <li class="nav-item ">
@@ -85,15 +95,25 @@
                                 <li><button class="dropdown-item size" type="button"
                                         size-value='Data.Health.Fertility Rate'>Fertility Rate</button></li>
                                 <li><button class="dropdown-item size" type="button"
+                                        size-value='Data.Rural Development.Arable Land'>Arable Land</button></li>
+                                <li><button class="dropdown-item size" type="button"
+                                        size-value='Data.Rural Development.Agricultural Land'>Agriculture Land</button></li>
+                                <li><button class="dropdown-item size" type="button"
                                         size-value='Data.Infrastructure.Telephone Lines'>Telephone Lines</button></li>
                                 <li><button class="dropdown-item size" type="button" size-value='Data.Rural Development.Rural Population'>Rural
                                         Population</button></li>
                                 <li><button class="dropdown-item size" type="button" size-value='Data.Health.Total Population'>Total
                                         Population</button></li>
                                 <li><button class="dropdown-item size" type="button"
-                                        size-value='Data.Health.Population Growth'>Population Growth</button></li>
+                                        size-value='Data.Health.Population Growth'>Health Population Growth</button></li>
                                 <li><button class="dropdown-item size" type="button"
                                         size-value='Data.Urban Development.Population Density'>Population Density</button></li>
+                                <li><button class="dropdown-item size" type="button"
+                                        size-value='Data.Infrastructure.Mobile Cellular Subscriptions'>Cellular Subscriptions</button></li>                
+                                <li><button class="dropdown-item size" type="button"
+                                        size-value='Data.Rural Development.Arable Land Percent'>Arable Land Precentage</button></li>
+                                <li><button class="dropdown-item size" type="button"
+                                        size-value='Data.Rural Development.Rural Population Growth'> Rural Population Growth</button></li>
                             </ul>
                         </li>
                         <li class="nav-item">
