--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang='en'>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Homework #3: Global Developments - CSE 578 - Fall 2023</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,7 +23,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="container">
         <h1 class="text-center">Homework #3: Global Developments</h1>
         <h3 class="text-center">Shivanshu Verma - sverma76@asu.edu</h3>
         <br>
@@ -35,7 +36,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto  mb-lg-1">
+                    <ul class="navbar-nav me-auto  mb-lg-4">
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -155,18 +156,61 @@
 
                             </div>
                         </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Boxplot Attribute
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><button class="dropdown-item boxplot-nav" type="button" boxplot-nav-value='Data.Health.Birth Rate'>Birth
+                                        Rate</button></li>
+                                <li><button class="dropdown-item boxplot-nav" type="button" boxplot-nav-value='Data.Health.Death Rate'>Death
+                                        Rate</button></li>
+                                <li><button class="dropdown-item boxplot-nav" type="button" boxplot-nav-value='Data.Rural Development.Land Area'>Land
+                                        Area</button></li>
+                                <li><button class="dropdown-item boxplot-nav" type="button"
+                                        boxplot-nav-value='Data.Rural Development.Surface Area'>Surface Area</button></li>
+                                <li><button class="dropdown-item boxplot-nav" type="button"
+                                        boxplot-nav-value='Data.Health.Fertility Rate'>Fertility Rate</button></li>
+                                <li><button class="dropdown-item boxplot-nav" type="button"
+                                        boxplot-nav-value='Data.Rural Development.Arable Land'>Arable Land</button></li>
+                                <li><button class="dropdown-item boxplot-nav" type="button"
+                                        boxplot-nav-value='Data.Rural Development.Agricultural Land'>Agriculture Land</button></li>
+                                <li><button class="dropdown-item boxplot-nav" type="button"
+                                        boxplot-nav-value='Data.Infrastructure.Telephone Lines'>Telephone Lines</button></li>
+                                <li><button class="dropdown-item boxplot-nav" type="button"
+                                        boxplot-nav-value='Data.Rural Development.Rural Population'>Rural Population</button></li>
+                                <li><button class="dropdown-item boxplot-nav" type="button"
+                                        boxplot-nav-value='Data.Health.Total Population'>Total Population</button></li>
+                                <li><button class="dropdown-item boxplot-nav" type="button"
+                                        boxplot-nav-value='Data.Health.Population Growth'>Health Population Growth</button></li>
+                                <li><button class="dropdown-item boxplot-nav" type="button"
+                                        boxplot-nav-value='Data.Urban Development.Population Density'>Population Density</button></li>
+                                <li><button class="dropdown-item boxplot-nav" type="button"
+                                        boxplot-nav-value='Data.Infrastructure.Mobile Cellular Subscriptions'>Cellular Subscriptions</button></li>
+                                <li><button class="dropdown-item boxplot-nav" type="button"
+                                        boxplot-nav-value='Data.Rural Development.Arable Land Percent'>Arable Land Precentage</button></li>
+                                <li><button class="dropdown-item boxplot-nav" type="button"
+                                        boxplot-nav-value='Data.Rural Development.Rural Population Growth'> Rural Population Growth</button></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <!-- <a class="nav-link active text" aria-current="page"><span id="boxplot-nav-selected"></span></a> -->
+                            <a class="nav-link active text" aria-current="page" id="boxplot-nav-selected"></a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav ml-auto year-container">
                         <li class="nav-item">
-                            <a class="nav-link text" aria-current="page"> Year &nbsp;
+                            <a class="nav-link nav-option" aria-current="page"> Year &nbsp;
                                 <input type="range" id="slider" min="1980" max="2013" value="1980">
                                 <input type="text" id="year-input" value="1980" class="text-input">
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <button id="playButton" class="btn btn-primary" onclick="togglePlayPause();">
+                        <li class="">
+                            <button id="playButton" class="btn btn-primary play-button" onclick="togglePlayPause();">
                                 <i id="playIcon" class="fas fa-play"></i>
-                                <span id="playText">Play</span>
+                                <!-- <span id="playText">Play</span> -->
                             </button>
                         </li>
                         <a class='year-event' value=1998></a>
@@ -176,10 +220,15 @@
             </div>
         </nav>
         <div id="svg-chart">
-            <svg width="1000" height="500" >
+            <svg width="700" height="500" class="beeswarm" >
+
+            </svg>
+            <svg width="600" height="500" class="boxplot" >
 
             </svg>
         </div>
+       
+ 
     </div>
     </div>
     <script src="sverma76.js"></script>
