Everything done, just need to align boxplot and beeswarm side by side

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <h1 class="text-center">Homework #3: Global Developments</h1>
         <h3 class="text-center">Shivanshu Verma - sverma76@asu.edu</h3>
         <br>
-
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -219,13 +218,14 @@
                 </div>
             </div>
         </nav>
-        <div id="svg-chart">
-            <svg width="700" height="500" class="beeswarm" >
+        <div id="chart-container" width="1300" height="500">
+            <div width="700" height="500" class="beeswarm-container" >
 
-            </svg>
-            <svg width="600" height="500" class="boxplot" >
+            </div>
+            <div width="500" height="500" class="boxplot-container" >
 
-            </svg>
+            </div>
+
         </div>
        
  
